Multithreading: cleaned + Timeouts param for commands